# UrbanPulse

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
.streamlit/: config.toml
configs/: base.yaml  cities.yaml
docs/maps/: nyc_xgboost_osm_311_income_map.html  nyc_xgboost_osm_only_income_map.html
experiments/: ablation_nyc.py  cross_city_eval.py  run_all.py  summarize_results.py  train_income.py  train_income_v2.py
scripts/: build_dataset.py  build_dataset_multi_city.py  cache_predictions.py  check_data_ready.py  compute_311_features.py  compute_geo_features.py  compute_osm_features_from_pbf.py  compute_osm_features_streaming.py  compute_osm_features_streaming_rich.py  download_acs_targets.py  download_osm_extract.py  fetch_acs_targets.py  fetch_census_data.py  fetch_census_income_multi.py  fetch_census_tracts_multi.py  fetch_nyc_311.py  fetch_osm_features.py  fetch_tract_geometries.py  generate_results_md.py  make_figures.py  make_interactive_maps.py  make_leaderboard.py  model_zoo.py  refresh_results.sh  run_everything.sh
scripts/utils/: census_api.py
tests/: test_models.py
urbanpulse/evaluation/: fairness.py  metrics.py
urbanpulse/utils/: config.py  status.py
