[metadata]
name = urbanpulse
version = 0.1.0
description = Real-Time Socioeconomic Sensing via Multi-Modal Urban Data

[options]
packages = find:
include_package_data = False

[options.packages.find]
include = urbanpulse*
exclude =
    data*
    outputs*
    configs*
    experiments*
    scripts*
    notebooks*
    docs*
    tests*
